# monet-meteo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  PYPI_PUBLICATION.md  README.md  RELEASE_PROCESS.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: index.md  installation.md  quickstart.md  troubleshooting.md  userguide.md
docs/api/: coordinates.md  derived.md  dynamics.md  index.md  interpolation.md  io.md  models.md  statistical.md  thermodynamics.md  units.md
docs/examples/: basic.md
docs/tutorials/: climate-data-processing.md  real-world-examples.md
monet_meteo/: __init__.py  _version.py  cli.py  constants.py  coordinates.py  interpolation.py  meteo.py  models.py  py.typed  units.py
monet_meteo/derived/: __init__.py  derived_calculations.py
monet_meteo/dynamics/: __init__.py  dynamic_calculations.py
monet_meteo/io/: __init__.py  xarray_integration.py
monet_meteo/statistical/: __init__.py  statistical_calculations.py
monet_meteo/thermodynamics/: __init__.py  thermodynamic_calculations.py
tests/: __init__.py  requirements.txt
tests/integration/: test_xarray_integration.py
tests/performance/: test_performance_benchmarks.py
tests/unit/: conftest.py  test_derived.py  test_dynamics.py  test_interpolation.py  test_statistical.py  test_thermodynamics.py  test_units.py
